--- a/designTokens/input/colors/core.yaml
+++ b/designTokens/input/colors/core.yaml
@@ -87,7 +87,7 @@ color:
     "3":
       value: "#fffb8f"
     "4":
-      value: "#{£566"
+      value: "#fff566"
     "5":
       value: "#ffec3d"
     "6":
@@ -143,7 +143,7 @@ color:
     "9":
       value: "#004741"
     "10":
-      value: "#e6fffb"
+      value: "#002329"
 
   blue:
     "1":
@@ -197,7 +197,7 @@ color:
     "3":
       value: "#ffadd2"
     "4":
-      value: "#f£85c0"
+      value: "#ff85c0"
     "5":
       value: "#f759ab"
     "6":
@@ -213,26 +213,22 @@ color:
 
   gray:
     "1":
-      value: "#ffffff"
-    "2":
       value: "#fafafa"
-    "3":
+    "2":
       value: "#f5f5f5"
-    "4":
+    "3":
       value: "#f0f0f0"
-    "5":
+    "4":
       value: "#d9d9d9"
-    "6":
+    "5":
       value: "#bfbfbf"
+    "6":
+      value: "#8c8c8c"
     "7":
-      value: "#8¢8c8c"
-    "8":
       value: "#595959"
-    "9":
+    "8":
       value: "#434343"
-    "10":
+    "9":
       value: "#262626"
-    "11":
-      value: "#1f1f1f"
-    "12":
+    "10":
       value: "#141414"
